# GestureControlPro

./: .gitignore  Package.swift  README.md  install_deps.sh  package-lock.json  package.json
Documentation/: API_reference.md  Architecture.md  Performance_Guide.md  installation.md
GestureControlPro.xcodeproj/: project.pbxproj
RemoteMacControl/: Info.plist
RemoteMacControl/RemoteMacControl.xcodeproj/: project.pbxproj
RemoteMacControl/iOS/: APIService.swift  ContentView.swift  ServerDashboardView.swift  iOSClient.swift
RemoteMacControl/macOS/: main.swift
Ressources/Assets.xcassets/: Applcon.appiconset  Colors
Ressources/Configurations/: GestureConfig.plist  NetworkConfig.plist  gestures.yaml
Scripts/: build.sh  deploy.sh  performance_benchmark.sh
Server/Node.js/: gesture_handler.js  package-lock.json  package.json  serveur.js
Server/Pyhhon/: gesture_executor.py  gesture_serveur.py  requirements.txt
Server/Python/: .gitignore  config.yaml  conftest.py  gesture_control.html  gesture_server.py  index.html  pyproject.toml  requirements.txt  run_network_tests.py  test_client.py  web_server.py
Server/Python/core/: controller.py  executor.py  models.py  performance.py  platform_controllers.py  predictor.py
Server/Python/tests/: test_controller.py  test_executor.py  test_predictor.py  test_server.py  test_trajectory_predictor.py  test_web_server.py
benchmark_results/20250814_113334/: benchmark_report.md  network_latency.json  resource_usage.json
benchmark_results/20250814_113602/: benchmark_report.md  command_throughput.json  (+2 more)
tests/: test_executor.py
(+27 files in other folders)
